Feat: auth, npe